# invisible_playwright-changedetectionio

./: .gitignore  LICENSE  README.md  pyproject.toml
invisible_playwright_changedetectionio/: __init__.py  fetcher.py
tests/: test_plugin.py
