[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invisible-playwright-changedetectionio"
version = "0.1.0"
description = "changedetection.io plugin: Firefox-based stealth fetcher backed by invisible_playwright (patched Firefox 150, C++-level fingerprint patches)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "feder-cr", email = "Federico.elia.majo@gmail.com" }]
keywords = ["changedetection", "playwright", "firefox", "stealth", "anti-detect", "scraping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "changedetection.io>=0.45.0",
    "invisible_playwright @ https://github.com/feder-cr/invisible_playwright/archive/refs/heads/main.tar.gz",
    "playwright>=1.40.0",
    "loguru",
]

[project.urls]
Homepage = "https://github.com/feder-cr/invisible_playwright-changedetectionio"
"Bug Tracker" = "https://github.com/feder-cr/invisible_playwright/issues"
"Backend wrapper" = "https://github.com/feder-cr/invisible_playwright"
"Backend binary" = "https://github.com/feder-cr/invisible_firefox"

[project.entry-points.changedetectionio]
invisible_firefox = "invisible_playwright_changedetectionio.fetcher"

[tool.hatch.metadata]
# Required to allow `git+https://...` direct references in dependencies.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["invisible_playwright_changedetectionio"]
